# dft-dummy

./: .coveragerc  .flake8  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
dft_dummy/: bravis.py  crystal_utils.py  kpoints.py  symmetry.py
tests/: conftest.py  test_bravis.py  test_crystal_utils.py  test_kpoints.py  test_symmetry.py
