[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dft_dummy"
version = "0.0.2.dev1"
description = "Density Function Theorem for Dummies"

license = "MIT"

authors = ["Hongze Xia <hongzex@gmail.com>"]

readme = 'README.md' # Markdown files are supported

repository = "https://github.com/xiahongze/dft-for-dummies"
homepage = "https://github.com/xiahongze/dft-for-dummies"

keywords = ['DFT', 'Electron', 'Brillouin Zone', 'Solid State Physics']

classifiers = [
  'Intended Audience :: Researchers',
  'Development Status :: 1 - Planning',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.8',
]

[tool.poetry.dependencies]
python = "^3.7" # Compatible python versions must be declared here
numpy = "^1.10.0"
scipy = "^1.4.0"
click = "^7.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-cov = "^2.3"
flake8 = "^3.8"
black = "20.8b1"

[tool.black]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/(
  (
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
