[metadata]
name = dft_dummy
version = attr: dft_dummy.__version__
description = Density Function Theorem for Dummies
author = Hongze Xia
author_email = hongzex@gmail.com
long_description = file: README.md, CHANGELOG.md, LICENSE
keywords = DFT, Electron, Brillouin Zone, Solid State Physics
license = MIT
license_files = LICENSE
url=https://github.com/xiahongze/dft-for-dummies
classifiers =
    Intended Audience :: Researchers
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
zip_safe = True
include_package_data = True
packages = dft_dummy
python_requires= >=3.7
install_requires =
    numpy==1.20.1
    scipy==1.6.1
    click==7.1.2
;     # importlib; python_version == "2.6"

[options.package_data]
# If any package contains *.txt or *.rst files, include them:
# * = *.txt, *.rst
# And include any *.msg files found in the "hello" package, too:
# hello = *.msg

[options.extras_require]
testing =
    # pytest and its plugins
	pytest >= 5.0
	pytest-cov >= 2.1
	; pytest-flake8 >= 3.8
	; pytest-black >= 0.3.7; python_implementation != "PyPy"
	# pytest-checkdocs >= 1.2.3
	# pytest-mypy; python_implementation != "PyPy"
	# pytest-enabler >= 1.0.1

    pip>=19.1 # For proper file:// URLs support.

dev =
    flake8 >= 3.8
    black >= 20

[options.packages.find]
exclude =
        build*
        docs*
        tests*
        *.tests
        tools*

[options.data_files]
# /etc/my_package =
#     site.d/00_default.conf
#     host.d/00_default.conf
# data = data/img/logo.png, data/svg/icon.svg

[tool:pytest]
collect_ignore = ['setup.py']

[aliases]
test = pytest